# ngram-prep

./: .gitignore  README.md  build.sh  build_container.sh  build_ngram_kit_sif.slurm  environment.def  logs_test  models_test  ngram-prep.code-workspace  output.txt  pyproject.toml  setup.py  slurm-434544.out
notebooks/: change_analysis_workflow.ipynb  db_tests.ipynb  download.ipynb  download_multigrams.ipynb  download_unigrams.ipynb  eng_multigrams_workflow.ipynb  eng_unigrams_workflow.ipynb  multigrams_pipeline.ipynb  multigrams_workflow.ipynb  notebook_logging.py  pivot_multigrams.ipynb  pivot_unigrams.ipynb  regression_results.txt  rus_multigrams_workflow.ipynb  rus_unigrams_workflow.ipynb  train_word2vec.ipynb  training_workflow.ipynb  unigrams_acquire.ipynb  unigrams_full_pipeline.ipynb  unigrams_pipeline.ipynb  unigrams_workflow.ipynb  unit_tests-ngram_acquire.ipynb  unit_tests-ngram_filter.ipynb  workflow_analyze_change.ipynb
scripts/: compaction_analysis.sh  file_size_report.sh  rocksdb_compact_watch.py
src/common_db/: __init__.py  api.py
src/ngram_acquire/db/: metadata.py  write.py
src/ngram_acquire/io/: fetch.py  locations.py  parse.py
src/ngram_acquire/pipeline/: logger.py  orchestrate.py  report.py  runner.py  worker.py
src/ngram_acquire/utils/: cleanup.py  filters.py  vocab.py
src/ngram_filter/: __init__.py  config.py  types.py
src/ngram_filter/filters/: builder.py  core_cy.pyx
src/ngram_filter/partitioning/: __init__.py  intelligent.py
src/ngram_filter/pipeline/: ingest.py  orchestrator.py  progress.py  whitelist.py  work_tracker.py  worker.py
src/ngram_filter/utils/: load_vocab.py
src/ngram_pivot/: __init__.py  config.py  pivot.py  stream.py
src/ngram_prep/: __init__.py
src/ngram_prep/common_db/: __init__.py  api.py  ingest.py
src/ngram_prep/db/: metadata.py  rocks.py  write.py
src/ngram_prep/io/: download.py  fetch.py  locations.py  parse.py
src/ngram_prep/ngram_acquire/: __init__.py  batch_writer.py  coordinator.py  core.py  executor.py  reporter.py  worker.py
src/ngram_prep/ngram_filter/: __init__.py  config.py  lemmatizer.py
src/ngram_prep/ngram_pivot/: __init__.py  config.py  stream.py
src/ngram_prep/parallel/: partitioning.py  split_monitor.py  types.py  work_tracker.py
src/ngram_prep/pipeline/: logger.py  orchestrate.py  report.py  runner.py  worker.py
src/ngram_prep/tracking/: __init__.py  database.py  density_sampling.py  partition_cache.py  partitioning.py  progress_tracker.py  work_splitter.py  work_tracker.py  work_unit_store.py
src/ngram_prep/utilities/: __init__.py  check_db_props.py  display.py  notebook_logging.py  peek.py
src/ngram_prep/utils/: cleanup.py  filters.py
src/ngram_train/: train_word2vec.py
src/ngram_train/word2vec/: __init__.py  align.py  config.py  display.py  evaluate.py  model.py  regression_analysis.py  train.py  visualize.py  w2v_model.py  worker.py
src/ngramkit/: __init__.py
src/ngramkit/common/: __init__.py  w2v_model.py
src/ngramkit/common_db/: __init__.py  compress.py  ingest.py
src/ngramkit/ngram_acquire/: __init__.py  batch_writer.py  coordinator.py  core.py  executor.py  reporter.py  worker.py
src/ngramkit/ngram_analyze/: __init__.py  average_relatedness_by_year.py  corpus_stats.py  cosine_similarity_time_series.py  semantic_drift.py  weat_time_series.py
src/ngramkit/ngram_filter/: config.py  lemmatizer.py
src/ngramkit/ngram_pivot/: encoding.py  stream.py
src/ngramkit/ngram_train/: __init__.py
src/ngramkit/tracking/: output_manager.py  types.py  work_splitter.py  work_tracker.py  work_unit_store.py
src/ngramkit/utilities/: check_db_props.py  count_items.c  notebook_logging.py  peek.py  progress.py
src/utilities/: check_db_props.py  compact_incremental.py  count_items.pyx  peek.py  reservoir_sampler.pyx  save_sample.py  skip_sampler.pyx
tests/: test_cleanup.py  test_partition_cache.py
tests/common_db/: test_api.py
tests/db/: test_metadata.py  test_rocks.py  test_write.py
tests/io/: test_fetch.py  test_locations.py  test_parse.py
tests/ngram_acquire/db/: test_metadata.py  test_write.py  test_write_shim_variants.py
tests/pipeline/: test_logger.py  test_orchestrate.py  test_report.py  test_runner.py  test_worker.py
tests/utils/: test_cleanup.py  test_filters.py
(+65 files in other folders)
