[build-system]
requires = ["setuptools>=68", "wheel", "Cython>=3.0", "numpy>=1.20"]
build-backend = "setuptools.build_meta"

[project]
name = "ngram-prep"
version = "0.1.0"
description = "A package for n-gram preprocessing and analysis"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["nlp", "ngram", "preprocessing", "text-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "numpy>=1.20",
    "Cython>=3.0",
    "spacy>=3.0",
    "spacy-lookups-data>=1.0.0",
    "stop-words>=2018.7.23",
    "setproctitle>=1.3.0",
    "tqdm>=4.64.0",
    "rocks-shim>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ngram-prep"
Documentation = "https://github.com/yourusername/ngram-prep#readme"
Repository = "https://github.com/yourusername/ngram-prep.git"
"Bug Tracker" = "https://github.com/yourusername/ngram-prep/issues"
Changelog = "https://github.com/yourusername/ngram-prep/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.pyx", "*.pxd", "*.c", "*.h"]

# Build configuration for Cython extensions
[tool.cython-lint]
max-line-length = 88

# Optional: Configure other tools
[tool.black]
line-length = 88
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]